Configurable JVM arguments